@@ -65,26 +65,24 @@ public class ObjectDiff extends NodeDiff {
     private Map<ArcOperation, ArcOperation> flatIds;
     private Map<ArcOperation, ArcOperation> phantomFks;
 
-    private Persistent object;
+    private final ObjectStorePersistentWrapper object;
 
-    ObjectDiff(final Persistent object) {
+    ObjectDiff(final ObjectStorePersistentWrapper object) {
 
-        super(object.getObjectId());
+        super(object.dataObject().getObjectId());
 
-        // retain the object, as ObjectStore may have weak references to
-        // registered
-        // objects and we can't allow it to deallocate dirty objects.
+        // retain the object, as ObjectStore may have weak references to registered objects,
+        // and we can't allow it to deallocate dirty objects.
         this.object = object;
 
-        EntityResolver entityResolver = object.getObjectContext().getEntityResolver();
+        EntityResolver entityResolver = object.dataObject().getObjectContext().getEntityResolver();
 
-        this.entityName = object.getObjectId().getEntityName();
+        this.entityName = object.dataObject().getObjectId().getEntityName();
         this.classDescriptor = entityResolver.getClassDescriptor(entityName);
 
-        int state = object.getPersistenceState();
+        int state = object.dataObject().getPersistenceState();
 
-        // take snapshot of simple properties and arcs used for optimistic
-        // locking..
+        // take snapshot of simple properties and arcs used for optimistic locking..
 
         if (state == PersistenceState.COMMITTED || state == PersistenceState.DELETED
                 || state == PersistenceState.MODIFIED) {
@@ -99,7 +97,7 @@ public class ObjectDiff extends NodeDiff {
 
                 @Override
                 public boolean visitAttribute(AttributeProperty property) {
-                    snapshot.put(property.getName(), property.readProperty(object));
+                    snapshot.put(property.getName(), property.readProperty(object.dataObject()));
                     return true;
                 }
 
@@ -114,8 +112,8 @@ public class ObjectDiff extends NodeDiff {
                     
                     // eagerly resolve optimistically locked relationships
                     Object target = (lock && isUsedForLocking)
-                            ? property.readProperty(object)
-                            : property.readPropertyDirectly(object);
+                            ? property.readProperty(object.dataObject())
+                            : property.readPropertyDirectly(object.dataObject());
 
                     if (target instanceof Persistent) {
                         target = ((Persistent) target).getObjectId();
@@ -130,14 +128,14 @@ public class ObjectDiff extends NodeDiff {
     }
 
     Object getObject() {
-        return object;
+        return object.dataObject();
     }
 
     ClassDescriptor getClassDescriptor() {
         // class descriptor is initiated in constructor, but is nullified on
         // serialization
         if (classDescriptor == null) {
-            EntityResolver entityResolver = object.getObjectContext().getEntityResolver();
+            EntityResolver entityResolver = object.dataObject().getObjectContext().getEntityResolver();
             this.classDescriptor = entityResolver.getClassDescriptor(entityName);
         }
 
@@ -152,7 +150,7 @@ public class ObjectDiff extends NodeDiff {
         Object value = arcSnapshot != null ? arcSnapshot.get(propertyName) : null;
 
         if (value instanceof Fault) {
-            Persistent target = (Persistent) ((Fault) value).resolveFault(object, propertyName);
+            Persistent target = (Persistent) ((Fault) value).resolveFault(object.dataObject(), propertyName);
 
             value = target != null ? target.getObjectId() : null;
             arcSnapshot.put(propertyName, value);
@@ -167,7 +165,7 @@ public class ObjectDiff extends NodeDiff {
     public ObjectId getCurrentArcSnapshotValue(String propertyName) {
         Object value = currentArcSnapshot != null ? currentArcSnapshot.get(propertyName) : null;
         if (value instanceof Fault) {
-            Persistent target = (Persistent) ((Fault) value).resolveFault(object, propertyName);
+            Persistent target = (Persistent) ((Fault) value).resolveFault(object.dataObject(), propertyName);
 
             value = target != null ? target.getObjectId() : null;
             currentArcSnapshot.put(propertyName, value);
@@ -328,7 +326,7 @@ public class ObjectDiff extends NodeDiff {
             return false;
         }
 
-        int state = object.getPersistenceState();
+        int state = object.dataObject().getPersistenceState();
         if (state == PersistenceState.NEW || state == PersistenceState.DELETED) {
             return false;
         }
@@ -342,7 +340,7 @@ public class ObjectDiff extends NodeDiff {
             public boolean visitAttribute(AttributeProperty property) {
 
                 Object oldValue = snapshot.get(property.getName());
-                Object newValue = property.readProperty(object);
+                Object newValue = property.readProperty(object.dataObject());
 
                 if (!property.equals(oldValue, newValue)) {
                     modFound[0] = true;
@@ -363,7 +361,7 @@ public class ObjectDiff extends NodeDiff {
                     return true;
                 }
 
-                Object newValue = property.readPropertyDirectly(object);
+                Object newValue = property.readPropertyDirectly(object.dataObject());
                 if (newValue instanceof Fault) {
                     return true;
                 }
@@ -411,7 +409,7 @@ public class ObjectDiff extends NodeDiff {
             @Override
             public boolean visitAttribute(AttributeProperty property) {
 
-                Object newValue = property.readProperty(object);
+                Object newValue = property.readProperty(object.dataObject());
 
                 // no baseline to compare
                 if (snapshot == null) {
